clusters/apps/staging/forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: forgejo
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - forgejo.boshock.ovh 
      secretName: forgejo-tls
  rules:
    - host: forgejo.boshock.ovh
      http:
        paths:
          - backend:
              service:
                name: forgejo
                port:
                  number: 3000
            path: /
            pathType: Prefix
